adjusted width on app-flex to 100% to fix spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -41,9 +41,10 @@ input {
   height: 30px;
   font-size: 18px;
   margin-bottom: 10px;
+  margin-top: 10px;
   text-indent: 5px;
   border: grey 2px solid;
-  width: 300px;
+  width: 250px;
 }
 
 .headerBottomLine {
@@ -63,7 +64,7 @@ input:focus {
   flex-wrap: wrap;
   gap: 7px;
   justify-content: center;
-  width: 450px;
+  width: 100%;
 }
 .someSuggestions {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
